@@ -5,7 +5,7 @@
    <parent>
       <groupId>org.rhq</groupId>
       <artifactId>rhq-core-parent</artifactId>
-      <version>4.6.0-SNAPSHOT</version>
+      <version>4.7.0-SNAPSHOT</version>
    </parent>
 
    <artifactId>rhq-core-domain</artifactId>
@@ -18,6 +18,8 @@
      <jboss.zip>${settings.localRepository}/org/jboss/as/jboss-as-dist/${jboss.version}/jboss-as-dist-${jboss.version}.zip</jboss.zip>
      <jboss.unzip.location>${basedir}/target/jboss-as-${jboss.version}</jboss.unzip.location>
      <rhq.internal>false</rhq.internal>
+     <jboss.vm.args>-Xmx700m -XX:MaxPermSize=200m</jboss.vm.args>     
+     <jboss.vm.args.debug></jboss.vm.args.debug> <!-- -Ditest.debug can override this, see below -->
      <!-- These properties guide which datasources are used for integration tests. Only one should be true.
           The default is Postgres, specify -Pitest.oracle to use Oracle -->
      <skip.postgres>false</skip.postgres>
@@ -680,17 +682,17 @@
          </build>
       </profile>
         
-      <profile>
-        <id>itest.debug</id>
-        <activation>
-          <property>
-            <name>itest.debug</name>
-          </property>
-        </activation>
-        <properties>
-          <jboss.vm.args.debug>-Xrunjdwp:transport=dt_socket,address=8798,server=y,suspend=y</jboss.vm.args.debug>
-        </properties>
-      </profile>
+    <profile>
+      <id>itest.debug</id>
+      <activation>
+        <property>
+          <name>itest.debug</name>
+        </property>
+      </activation>
+      <properties>
+        <jboss.vm.args.debug>-Xrunjdwp:transport=dt_socket,address=8798,server=y,suspend=y</jboss.vm.args.debug>
+      </properties>
+    </profile>
 
     <!-- These two properties allow Arquillian to inspect AS7 through the mgmt port, to determine the ports it needs to interact 
       with when spawning the AS7 instance. This allows the AS7 to run on non-default ports. If these properties are not set (for 
